cloudformation.yaml
Resources:
  Vpc8378EB38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: Jamulus/Vpc
    Metadata:
      aws:cdk:path: Jamulus/Vpc/Resource
  VpcJamulusSubnet1Subnet39D54A29:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/16
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Jamulus
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: Jamulus/Vpc/JamulusSubnet1
    Metadata:
      aws:cdk:path: Jamulus/Vpc/JamulusSubnet1/Subnet
  VpcJamulusSubnet1RouteTableF76CBFE8:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: Jamulus/Vpc/JamulusSubnet1
    Metadata:
      aws:cdk:path: Jamulus/Vpc/JamulusSubnet1/RouteTable
  VpcJamulusSubnet1RouteTableAssociation6E04580B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcJamulusSubnet1RouteTableF76CBFE8
      SubnetId:
        Ref: VpcJamulusSubnet1Subnet39D54A29
    Metadata:
      aws:cdk:path: Jamulus/Vpc/JamulusSubnet1/RouteTableAssociation
  VpcJamulusSubnet1DefaultRoute5DA6AA03:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcJamulusSubnet1RouteTableF76CBFE8
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: Jamulus/Vpc/JamulusSubnet1/DefaultRoute
  VpcIGWD7BA715C:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Jamulus/Vpc
    Metadata:
      aws:cdk:path: Jamulus/Vpc/IGW
  VpcVPCGWBF912B6E:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      InternetGatewayId:
        Ref: VpcIGWD7BA715C
    Metadata:
      aws:cdk:path: Jamulus/Vpc/VPCGW
  ClusterEB0386A7:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: Jamulus/Cluster/Resource
  TaskDefinitionTaskRoleFD40A61D:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: Jamulus/TaskDefinition/TaskRole/Resource
  TaskDefinitionB36D86D9:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Cpu: 2048
          EntryPoint:
            - Jamulus
            - --server
            - --nogui
          Essential: true
          Image: grundic/jamulus
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: TaskDefinitionJamulusLogGroup72CF8DD4
              awslogs-stream-prefix: Jamulus
              awslogs-region:
                Ref: AWS::Region
          Memory: 4096
          Name: Jamulus
      Cpu: "2048"
      ExecutionRoleArn:
        Fn::GetAtt:
          - TaskDefinitionExecutionRole8D61C2FB
          - Arn
      Family: JamulusTaskDefinitionD8648795
      Memory: "4096"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - EC2
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - TaskDefinitionTaskRoleFD40A61D
          - Arn
    Metadata:
      aws:cdk:path: Jamulus/TaskDefinition/Resource
  TaskDefinitionJamulusLogGroup72CF8DD4:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: Jamulus/TaskDefinition/Jamulus/LogGroup/Resource
  TaskDefinitionExecutionRole8D61C2FB:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: Jamulus/TaskDefinition/ExecutionRole/Resource
  TaskDefinitionExecutionRoleDefaultPolicy1F3406F5:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - TaskDefinitionJamulusLogGroup72CF8DD4
                - Arn
        Version: "2012-10-17"
      PolicyName: TaskDefinitionExecutionRoleDefaultPolicy1F3406F5
      Roles:
        - Ref: TaskDefinitionExecutionRole8D61C2FB
    Metadata:
      aws:cdk:path: Jamulus/TaskDefinition/ExecutionRole/DefaultPolicy/Resource
  SecurityGroup580CF996:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Jamulus/Security Group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:UDP 22124
          FromPort: 22124
          IpProtocol: udp
          ToPort: 22124
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: Jamulus/Security Group/Resource
  ServiceD69D759B:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: ClusterEB0386A7
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - Fn::GetAtt:
                - SecurityGroup580CF996
                - GroupId
          Subnets:
            - Ref: VpcJamulusSubnet1Subnet39D54A29
      TaskDefinition:
        Ref: TaskDefinitionB36D86D9
    Metadata:
      aws:cdk:path: Jamulus/Service/Service
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=1.89.0,@aws-cdk/assets=1.89.0,@aws-cdk/aws-applicationautoscaling=1.89.0,@aws-cdk/aws-autoscaling=1.89.0,@aws-cdk/aws-autoscaling-common=1.89.0,@aws-cdk/aws-autoscaling-hooktargets=1.89.0,@aws-cdk/aws-cloudwatch=1.89.0,@aws-cdk/aws-codeguruprofiler=1.89.0,@aws-cdk/aws-ec2=1.89.0,@aws-cdk/aws-ecr=1.89.0,@aws-cdk/aws-ecr-assets=1.89.0,@aws-cdk/aws-ecs=1.89.0,@aws-cdk/aws-elasticloadbalancingv2=1.89.0,@aws-cdk/aws-events=1.89.0,@aws-cdk/aws-iam=1.89.0,@aws-cdk/aws-kms=1.89.0, [...]
    Metadata:
      aws:cdk:path: Jamulus/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
